# prednote

./: .gitignore  .travis.yml  CabalCommon.hs  LICENSE  README.md  Where_QuickCheck.md  changelog  current-versions.txt  genCabal.hs  generate  minimum-versions.txt  prednote-test.hs  prednote.cabal  sunlight-test.hs  upload-docs
Data/Prednote/: Expressions.hs  Pdct.hs  TestTree.hs
Data/Prednote/Expressions/: Infix.hs  RPN.hs
lib/: Prednote.hs
lib/Data/: Prednote.hs
lib/Data/Prednote/: Expressions.hs  Pdct.hs  Predbox.hs  Test.hs  TestTree.hs
lib/Prednote/: Comparisons.hs  Core.hs  Expressions.hs  Pred.hs  Predbox.hs  Series.hs  Test.hs  Text.hs
lib/Prednote/Expressions/: Infix.hs  RPN.hs
tests/: .gitignore  Decrees.hs  current-versions.txt  genCabal.hs  generate  minimum-versions.txt  prednote-test.cabal  prednote-test.hs  prednote-tests.hs  prednote-visual-tests.hs  sunlight-test.hs
tests/Prednote/Core/: Instances.hs  Properties.hs
tests/Rainbow/: Instances.hs
tests/exe/: prednote-test.hs  prednote-visual-tests.hs
tests/exe/Prednote/Comparisons/: Properties.hs
tests/exe/Prednote/Core/: Properties.hs
tests/exe/Prednote/Prebuilt/: Properties.hs
tests/exe/Prednote/Pred/Core/: Properties.hs
tests/lib/Data/Text/: Wrappers.hs
tests/lib/Data/Tree/: Generators.hs
tests/lib/Prednote/Core/: Generators.hs
tests/lib/Prednote/Prebuilt/: Generators.hs
tests/lib/Prednote/Pred/: Properties.hs  Wrappers.hs
tests/lib/Prednote/Pred/Core/: Generators.hs  Wrappers.hs
tests/lib/Prednote/Tests/: Util.hs
tests/visual/: prednote-visual-test.hs
(+33 files in other folders)
